apps/vault/ingress-vault-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-tailscale
  namespace: siloarr
  annotations:
    tailscale.com/tags: "tag:k8s-operator"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: stash
      port:
        number: 9999
  tls:
    - hosts:
        - vault
