apps/vault/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: siloarr
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: vault.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stash
                port:
                  number: 9999
  tls:
    - hosts:
        - vault.homelab
      secretName: vault-tls
